--- a/.buildkite/pipelines/ruby-2.yml
+++ b/.buildkite/pipelines/ruby-2.yml
@@ -17,10 +17,10 @@ steps:
     commands:
       - "gem install bundler --no-document"
       - "bundle install"
-      - "bundle exec rake spec"
+      - "bundle exec rake spec2"
     artifact_paths:
-      - "junit.xml"
-      - "coverage/**/*"
+      - "junit2.xml"
+      - "coverage2/**/*"
 
   - wait: ~
     continue_on_failure: true
@@ -28,4 +28,4 @@ steps:
   - label: ":junit: Report"
     plugins:
       - junit-annotate#v1.6.0:
-          artifacts: junit.xml
+          artifacts: junit2.xml
